--- a/ChaosStyle.css
+++ b/ChaosStyle.css
@@ -71,10 +71,11 @@ body {
 
 #powerBar {
     position: absolute;
+    text-align: center;
     background-color: #f5d745;
     border: solid black;
     border-width: 0 0 5px 5px;
-    width: 284px;
+    width: 300px;
     height: 45px;
     opacity: 0;
     z-index: 2;
